tests/ui/variance/variance-regions-direct.stderr
error: [+, +, +]
  --> $DIR/variance-regions-direct.rs:9:1
   |
LL | struct Test2<'a, 'b, 'c> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: [-, -, -]
  --> $DIR/variance-regions-direct.rs:18:1
   |
LL | struct Test3<'a, 'b, 'c> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: [+, o]
  --> $DIR/variance-regions-direct.rs:27:1
   |
LL | struct Test4<'a, 'b:'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: [-, o]
  --> $DIR/variance-regions-direct.rs:35:1
   |
LL | struct Test5<'a, 'b:'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: [+, o]
  --> $DIR/variance-regions-direct.rs:45:1
   |
LL | struct Test6<'a, 'b:'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: [*]
  --> $DIR/variance-regions-direct.rs:52:1
   |
LL | struct Test7<'a> {
   | ^^^^^^^^^^^^^^^^

error: [-, +, o]
  --> $DIR/variance-regions-direct.rs:59:1
   |
LL | enum Test8<'a, 'b, 'c:'b> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

